@@ -96,8 +96,9 @@
 #define SSTATE_HELPER_SERVICE_BEFORE_JOB 35
 #define SSTATE_CHECK_DAEMON_CONFIG 36
 #define SSTATE_QMASTER_ENFORCED_LIMIT 37
+#define SSTATE_ADD_GRP_SET_ERROR   38
 
-#define MAX_SSTATE SSTATE_CHECK_DAEMON_CONFIG
+#define MAX_SSTATE SSTATE_ADD_GRP_SET_ERROR
 
 #define SSTATE_FAILURE_AFTER_JOB  100
 
