@@ -201,6 +201,7 @@ void son(const char *childname, char *script_file, int truncate_stderr_out)
    struct passwd pw_struct;
    char *buffer;
    int size;
+   bool skip_silently = false;
 
 #if defined(INTERIX)
 #  define TARGET_USER_BUFFER_SIZE 1024
@@ -440,17 +441,20 @@ void son(const char *childname, char *script_file, int truncate_stderr_out)
     ** Set uid and gid and
     ** (add additional group id), switches to start user (root) 
     **/
-    tmp_str = search_conf_val("qsub_gid");
-    if (strcmp(tmp_str, "no")) {
-       use_qsub_gid = 1;   
-       gid = atol(tmp_str);
-    }
-    else {
-       use_qsub_gid = 0;
-       gid = 0;
-    }
+   tmp_str = search_conf_val("qsub_gid");
+   if (tmp_str != NULL && strcmp(tmp_str, "no") == 0) {
+      use_qsub_gid = 1;   
+      gid = atol(tmp_str);
+   } else {
+      use_qsub_gid = 0;
+      gid = 0;
+   }
+   tmp_str = search_conf_val("skip_ngroups_max_silently");
+   if (tmp_str != NULL && strcmp(tmp_str, "yes") == 0) {
+      skip_silently = true;
+   }
 
-/* --- switch to intermediate user */
+   /* --- switch to intermediate user */
    shepherd_trace("switching to intermediate/target user");
    if(is_qlogin_starter && g_new_interactive_job_support == false) {
       /* 
@@ -460,7 +464,7 @@ void son(const char *childname, char *script_file, int truncate_stderr_out)
        * kill subprocesses.
        */
       ret = sge_set_uid_gid_addgrp(target_user, intermediate_user,
-               0, 0, 0, err_str, use_qsub_gid, gid);
+               0, 0, 0, err_str, use_qsub_gid, gid, skip_silently);
    } else { /* if (!is_qlogin_starter || g_new_interactive_job_support == true) */
       /*
        * In not-interactive jobs and in the new IJS we must set the 
@@ -468,7 +472,7 @@ void son(const char *childname, char *script_file, int truncate_stderr_out)
        * do this for us.
        */
       ret = sge_set_uid_gid_addgrp(target_user, intermediate_user,
-               min_gid, min_uid, add_grp_id, err_str, use_qsub_gid, gid);
+               min_gid, min_uid, add_grp_id, err_str, use_qsub_gid, gid, skip_silently);
    }
 
    if (ret < 0) {
@@ -481,6 +485,8 @@ void son(const char *childname, char *script_file, int truncate_stderr_out)
          shepherd_state = SSTATE_PASSWD_MISSING;
       } else if (ret == 4) {
          shepherd_state = SSTATE_PASSWD_WRONG;
+      } else if (ret == 5) {
+         shepherd_state = SSTATE_ADD_GRP_SET_ERROR;
       }
       /*
       ** violation of min_gid or min_uid
@@ -870,25 +876,25 @@ void son(const char *childname, char *script_file, int truncate_stderr_out)
 #endif
 /* ---- switch to target user */
    if (intermediate_user) {
-      if(is_qlogin_starter) {
+      if (is_qlogin_starter) {
          ret = sge_set_uid_gid_addgrp(target_user, NULL, 0, 0, 0, 
-                                      err_str, use_qsub_gid, gid);
+                                      err_str, use_qsub_gid, gid, skip_silently);
       } else {
          ret = sge_set_uid_gid_addgrp(target_user, NULL, min_gid, min_uid, 
-                                      add_grp_id, err_str, use_qsub_gid, gid);
+                                      add_grp_id, err_str, use_qsub_gid, gid, skip_silently);
       }
       if (ret < 0) {
-        shepherd_trace(err_str);
-        shepherd_trace("try running further with uid=%d", (int)getuid());
+         shepherd_trace(err_str);
+         shepherd_trace("try running further with uid=%d", (int)getuid());
       } else if (ret > 0) {
-        if(ret == 2) {
-          shepherd_state = SSTATE_PASSWD_FILE_ERROR;
-        } else if (ret == 3) {
-          shepherd_state = SSTATE_PASSWD_MISSING;
-        } else if (ret == 4) {
-          shepherd_state = SSTATE_PASSWD_WRONG;
-        }
-        shepherd_error(1, err_str);
+         if(ret == 2) {
+            shepherd_state = SSTATE_PASSWD_FILE_ERROR;
+         } else if (ret == 3) {
+            shepherd_state = SSTATE_PASSWD_MISSING;
+         } else if (ret == 4) {
+            shepherd_state = SSTATE_PASSWD_WRONG;
+         }
+         shepherd_error(1, err_str);
       }
    }
    shepherd_trace("now running with uid="uid_t_fmt", euid="uid_t_fmt, 
