@@ -160,5 +160,6 @@ void mconf_get_h_locks(char **pret);
 void mconf_get_s_locks(char **pret);
 int mconf_get_jsv_timeout(void);
 int mconf_get_jsv_threshold(void);
+bool mconf_get_ignore_ngroups_max_limit(void);
 
 #endif /* __SGE_CONF_H */
