@@ -77,10 +77,10 @@ int sge_group2gid(const char *gname, gid_t *gidp, int retries);
 int sge_uid2user(uid_t uid, char *dst, size_t sz, int retries); 
 int sge_gid2group(gid_t gid, char *dst, size_t sz, int retries);
 int _sge_gid2group(gid_t gid, gid_t *last_gid, char **grpnamep, int retries);
-int sge_add_group(gid_t newgid, char *err_str); 
+int sge_add_group(gid_t newgid, char *err_str, bool skip_silently); 
 int sge_set_uid_gid_addgrp(const char *user, const char *intermediate_user,
                            int min_gid, int min_uid, int add_grp, 
-                           char *err_str, int use_qsub_gid, gid_t qsub_gid);
+                           char *err_str, int use_qsub_gid, gid_t qsub_gid, bool skip_silently);
 
 struct passwd *sge_getpwnam_r(const char *name, struct passwd *pw, 
                               char *buffer, size_t bufsize);
@@ -93,12 +93,6 @@ bool sge_is_user_superuser(const char *name);
 int get_group_buffer_size(void);
 int get_pw_buffer_size(void);
 
-/*
- * Deprecated functions. Do not use anymore!
- */
-int sge_set_uid_gid_addgrp(const char *user, const char *intermediate_user,
-                           int min_gid, int min_uid, int add_grp, 
-                           char *err_str, int use_qsub_gid, gid_t qsub_gid);
 #if defined(INTERIX)
 int uidgid_read_passwd(const char *user, char **pass, char *err_str);
 #endif
