@@ -8,6 +8,13 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+EB-2010-03-22-0: Bugfix:      o When supplementary group id cannot be set the 
+                                queue is set into error state
+                              o Setting of supplementary group id might fail on 
+                                Mac OS X
+                 Issues:      GE-3400 GE-3412
+                 Review:      TBD
+
 EB-2010-03-21-0: Bugfix:      Perl JSV script does not allow comma in CMDNAME 
                               and CMDARGS 
                  Issues:      GE-3399
